Grammatica/Par.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.5).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module Grammatica.Par
  ( happyError
  , myLexer
  , pProgram
  , pStmt
  , pRExpr
  , pLExpr
  ) where

import Prelude

import qualified Grammatica.Abs
import Grammatica.Lex

}

%name pProgram Program
%name pStmt Stmt
%name pRExpr RExpr
%name pLExpr LExpr
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!'        { PT _ (TS _ 1)  }
  '!='       { PT _ (TS _ 2)  }
  '%'        { PT _ (TS _ 3)  }
  '&'        { PT _ (TS _ 4)  }
  '&&'       { PT _ (TS _ 5)  }
  '&='       { PT _ (TS _ 6)  }
  '('        { PT _ (TS _ 7)  }
  ')'        { PT _ (TS _ 8)  }
  '*'        { PT _ (TS _ 9)  }
  '*='       { PT _ (TS _ 10) }
  '+'        { PT _ (TS _ 11) }
  '++'       { PT _ (TS _ 12) }
  '+='       { PT _ (TS _ 13) }
  ','        { PT _ (TS _ 14) }
  '-'        { PT _ (TS _ 15) }
  '--'       { PT _ (TS _ 16) }
  '-='       { PT _ (TS _ 17) }
  '/'        { PT _ (TS _ 18) }
  '/='       { PT _ (TS _ 19) }
  ';'        { PT _ (TS _ 20) }
  '<'        { PT _ (TS _ 21) }
  '<='       { PT _ (TS _ 22) }
  '='        { PT _ (TS _ 23) }
  '=='       { PT _ (TS _ 24) }
  '>'        { PT _ (TS _ 25) }
  '>='       { PT _ (TS _ 26) }
  '['        { PT _ (TS _ 27) }
  ']'        { PT _ (TS _ 28) }
  '^'        { PT _ (TS _ 29) }
  '^='       { PT _ (TS _ 30) }
  'bool'     { PT _ (TS _ 31) }
  'break'    { PT _ (TS _ 32) }
  'char'     { PT _ (TS _ 33) }
  'continue' { PT _ (TS _ 34) }
  'do'       { PT _ (TS _ 35) }
  'else'     { PT _ (TS _ 36) }
  'false'    { PT _ (TS _ 37) }
  'float'    { PT _ (TS _ 38) }
  'func'     { PT _ (TS _ 39) }
  'if'       { PT _ (TS _ 40) }
  'int'      { PT _ (TS _ 41) }
  'string'   { PT _ (TS _ 42) }
  'true'     { PT _ (TS _ 43) }
  'var'      { PT _ (TS _ 44) }
  'while'    { PT _ (TS _ 45) }
  '{'        { PT _ (TS _ 46) }
  '|='       { PT _ (TS _ 47) }
  '||'       { PT _ (TS _ 48) }
  '}'        { PT _ (TS _ 49) }
  L_Ident    { PT _ (TV $$)   }
  L_charac   { PT _ (TC $$)   }
  L_doubl    { PT _ (TD $$)   }
  L_integ    { PT _ (TI $$)   }
  L_quoted   { PT _ (TL $$)   }

%%

Ident :: { Grammatica.Abs.Ident }
Ident  : L_Ident { Grammatica.Abs.Ident $1 }

Char    :: { Char }
Char     : L_charac { (read $1) :: Char }

Double  :: { Double }
Double   : L_doubl  { (read $1) :: Double }

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

String  :: { String }
String   : L_quoted { $1 }

Boolean :: { Grammatica.Abs.Boolean }
Boolean
  : 'true' { Grammatica.Abs.Boolean_true }
  | 'false' { Grammatica.Abs.Boolean_false }

RExpr :: { Grammatica.Abs.RExpr }
RExpr
  : RExpr1 { $1 } | RExpr '||' RExpr1 { Grammatica.Abs.Or $1 $3 }

RExpr1 :: { Grammatica.Abs.RExpr }
RExpr1
  : RExpr2 { $1 } | RExpr1 '&&' RExpr2 { Grammatica.Abs.And $1 $3 }

RExpr2 :: { Grammatica.Abs.RExpr }
RExpr2 : RExpr3 { $1 } | '!' RExpr3 { Grammatica.Abs.Not $2 }

RExpr3 :: { Grammatica.Abs.RExpr }
RExpr3
  : RExpr4 { $1 }
  | RExpr4 '==' RExpr4 { Grammatica.Abs.Eq $1 $3 }
  | RExpr4 '!=' RExpr4 { Grammatica.Abs.Neq $1 $3 }
  | RExpr4 '<' RExpr4 { Grammatica.Abs.Lt $1 $3 }
  | RExpr4 '<=' RExpr4 { Grammatica.Abs.LtE $1 $3 }
  | RExpr4 '>' RExpr4 { Grammatica.Abs.Gt $1 $3 }
  | RExpr4 '>=' RExpr4 { Grammatica.Abs.GtE $1 $3 }

RExpr4 :: { Grammatica.Abs.RExpr }
RExpr4
  : RExpr5 { $1 }
  | RExpr4 '+' RExpr5 { Grammatica.Abs.Add $1 $3 }
  | RExpr4 '-' RExpr5 { Grammatica.Abs.Sub $1 $3 }

RExpr5 :: { Grammatica.Abs.RExpr }
RExpr5
  : RExpr6 { $1 }
  | RExpr5 '*' RExpr6 { Grammatica.Abs.Mul $1 $3 }
  | RExpr5 '/' RExpr6 { Grammatica.Abs.Div $1 $3 }
  | RExpr5 '%' RExpr6 { Grammatica.Abs.Mod $1 $3 }

RExpr6 :: { Grammatica.Abs.RExpr }
RExpr6
  : RExpr7 { $1 } | RExpr7 '^' RExpr6 { Grammatica.Abs.Pow $1 $3 }

RExpr7 :: { Grammatica.Abs.RExpr }
RExpr7
  : RExpr8 { $1 }
  | '-' RExpr8 { Grammatica.Abs.Neg $2 }
  | '&' LExpr { Grammatica.Abs.Ref $2 }

RExpr8 :: { Grammatica.Abs.RExpr }
RExpr8 : RExpr9 { $1 } | FunCall { Grammatica.Abs.FCall $1 }

RExpr9 :: { Grammatica.Abs.RExpr }
RExpr9
  : RExpr10 { $1 }
  | Integer { Grammatica.Abs.Int $1 }
  | Char { Grammatica.Abs.Char $1 }
  | String { Grammatica.Abs.String $1 }
  | Double { Grammatica.Abs.Float $1 }
  | Boolean { Grammatica.Abs.Bool $1 }
  | '[' Integer ']' BasicType '{' ListRExpr '}' { Grammatica.Abs.GoArrayLit $2 $4 $6 }

RExpr10 :: { Grammatica.Abs.RExpr }
RExpr10 : RExpr11 { $1 }

RExpr11 :: { Grammatica.Abs.RExpr }
RExpr11 : RExpr12 { $1 }

RExpr12 :: { Grammatica.Abs.RExpr }
RExpr12 : '(' RExpr ')' { $2 } | LExpr { Grammatica.Abs.Lexpr $1 }

FunCall :: { Grammatica.Abs.FunCall }
FunCall : Ident '(' ListRExpr ')' { Grammatica.Abs.Call $1 $3 }

ListRExpr :: { [Grammatica.Abs.RExpr] }
ListRExpr
  : {- empty -} { [] }
  | RExpr { (:[]) $1 }
  | RExpr ',' ListRExpr { (:) $1 $3 }

LExpr :: { Grammatica.Abs.LExpr }
LExpr : LExpr1 { $1 } | '*' RExpr9 { Grammatica.Abs.Deref $2 }

LExpr1 :: { Grammatica.Abs.LExpr }
LExpr1
  : LExpr2 { $1 }
  | '++' LExpr2 { Grammatica.Abs.PreInc $2 }
  | '--' LExpr2 { Grammatica.Abs.PreDecr $2 }

LExpr2 :: { Grammatica.Abs.LExpr }
LExpr2
  : LExpr3 { $1 }
  | LExpr3 '++' { Grammatica.Abs.PostInc $1 }
  | LExpr3 '--' { Grammatica.Abs.PostDecr $1 }
  | BLExpr { Grammatica.Abs.BasLExpr $1 }

LExpr3 :: { Grammatica.Abs.LExpr }
LExpr3 : '(' LExpr ')' { $2 }

BLExpr :: { Grammatica.Abs.BLExpr }
BLExpr
  : Ident '[' RExpr ']' { Grammatica.Abs.ArrayEl $1 $3 }
  | Ident { Grammatica.Abs.Id $1 }

Program :: { Grammatica.Abs.Program }
Program : ListDecl { Grammatica.Abs.Prog $1 }

ListDecl :: { [Grammatica.Abs.Decl] }
ListDecl : {- empty -} { [] } | Decl ListDecl { (:) $1 $2 }

Decl :: { Grammatica.Abs.Decl }
Decl
  : 'func' Ident '(' ListParameter ')' CompStmt { Grammatica.Abs.Dfun $2 $4 $6 }
  | 'var' VarSpec ';' { Grammatica.Abs.DvarGo $2 }

ListParameter :: { [Grammatica.Abs.Parameter] }
ListParameter
  : {- empty -} { [] }
  | Parameter { (:[]) $1 }
  | Parameter ',' ListParameter { (:) $1 $3 }

Parameter :: { Grammatica.Abs.Parameter }
Parameter : 'var' Ident TypeSpec { Grammatica.Abs.Param $2 $3 }

VarSpec :: { Grammatica.Abs.VarSpec }
VarSpec
  : Ident TypeSpec '=' RExpr { Grammatica.Abs.VarSpecSingleInit $1 $2 $4 }
  | Ident '=' RExpr { Grammatica.Abs.VarSpecArrayInit $1 $3 }
  | Ident TypeSpec { Grammatica.Abs.VarSpecSingleNoInit $1 $2 }

TypeSpec :: { Grammatica.Abs.TypeSpec }
TypeSpec
  : BasicType { Grammatica.Abs.BasTyp $1 }
  | CompoundType { Grammatica.Abs.CompType $1 }

BasicType :: { Grammatica.Abs.BasicType }
BasicType
  : 'bool' { Grammatica.Abs.BasicType_bool }
  | 'char' { Grammatica.Abs.BasicType_char }
  | 'float' { Grammatica.Abs.BasicType_float }
  | 'int' { Grammatica.Abs.BasicType_int }
  | 'string' { Grammatica.Abs.BasicType_string }

CompoundType :: { Grammatica.Abs.CompoundType }
CompoundType
  : '[' Integer ']' TypeSpec { Grammatica.Abs.ArrDef $2 $4 }
  | '[' ']' TypeSpec { Grammatica.Abs.ArrUnDef $3 }
  | '*' TypeSpec { Grammatica.Abs.Pointer $2 }

CompStmt :: { Grammatica.Abs.CompStmt }
CompStmt : '{' ListBlockItem '}' { Grammatica.Abs.BlockDecl $2 }

ListBlockItem :: { [Grammatica.Abs.BlockItem] }
ListBlockItem
  : {- empty -} { [] } | BlockItem ListBlockItem { (:) $1 $2 }

BlockItem :: { Grammatica.Abs.BlockItem }
BlockItem
  : Decl { Grammatica.Abs.DeclItem $1 }
  | Stmt { Grammatica.Abs.StmtItem $1 }

ListStmt :: { [Grammatica.Abs.Stmt] }
ListStmt : {- empty -} { [] } | Stmt ListStmt { (:) $1 $2 }

Stmt :: { Grammatica.Abs.Stmt }
Stmt
  : CompStmt { Grammatica.Abs.Comp $1 }
  | FunCall ';' { Grammatica.Abs.ProcCall $1 }
  | JumpStmt ';' { Grammatica.Abs.Jmp $1 }
  | IterStmt { Grammatica.Abs.Iter $1 }
  | SelectionStmt { Grammatica.Abs.Sel $1 }
  | LExpr Assignment_op RExpr ';' { Grammatica.Abs.Assgn $1 $2 $3 }
  | LExpr ';' { Grammatica.Abs.LExprStmt $1 }
  | 'var' VarSpec ';' { Grammatica.Abs.DeclStmt $2 }
  | Ident '++' ';' { Grammatica.Abs.StmtInc $1 }
  | Ident '--' ';' { Grammatica.Abs.StmtDec $1 }

Assignment_op :: { Grammatica.Abs.Assignment_op }
Assignment_op
  : '=' { Grammatica.Abs.Assign }
  | '*=' { Grammatica.Abs.AssgnMul }
  | '+=' { Grammatica.Abs.AssgnAdd }
  | '/=' { Grammatica.Abs.AssgnDiv }
  | '-=' { Grammatica.Abs.AssgnSub }
  | '^=' { Grammatica.Abs.AssgnPow }
  | '&=' { Grammatica.Abs.AssgnAnd }
  | '|=' { Grammatica.Abs.AssgnOr }

JumpStmt :: { Grammatica.Abs.JumpStmt }
JumpStmt
  : 'break' { Grammatica.Abs.Break }
  | 'continue' { Grammatica.Abs.Continue }

SelectionStmt :: { Grammatica.Abs.SelectionStmt }
SelectionStmt
  : 'if' '(' RExpr ')' Stmt { Grammatica.Abs.IfNoElse $3 $5 }
  | 'if' '(' RExpr ')' Stmt 'else' Stmt { Grammatica.Abs.IfElse $3 $5 $7 }

IterStmt :: { Grammatica.Abs.IterStmt }
IterStmt
  : 'while' '(' RExpr ')' Stmt { Grammatica.Abs.While $3 $5 }
  | 'do' Stmt 'while' '(' RExpr ')' ';' { Grammatica.Abs.DoWhile $2 $5 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
