Grammatica/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Grammatica/Par.y
-----------------------------------------------------------------------------

state 100 contains 1 shift/reduce conflicts.
state 174 contains 14 reduce/reduce conflicts.
state 186 contains 1 shift/reduce conflicts.

rule 92 is unused
rule 93 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pStmt -> Stmt                               (1)
	%start_pRExpr -> RExpr                             (2)
	%start_pLExpr -> LExpr                             (3)
	Ident -> L_Ident                                   (4)
	Char -> L_charac                                   (5)
	Double -> L_doubl                                  (6)
	Integer -> L_integ                                 (7)
	String -> L_quoted                                 (8)
	Boolean -> 'true'                                  (9)
	Boolean -> 'false'                                 (10)
	RExpr -> RExpr1                                    (11)
	RExpr -> RExpr '||' RExpr1                         (12)
	RExpr1 -> RExpr2                                   (13)
	RExpr1 -> RExpr1 '&&' RExpr2                       (14)
	RExpr2 -> RExpr3                                   (15)
	RExpr2 -> '!' RExpr3                               (16)
	RExpr3 -> RExpr4                                   (17)
	RExpr3 -> RExpr4 '==' RExpr4                       (18)
	RExpr3 -> RExpr4 '!=' RExpr4                       (19)
	RExpr3 -> RExpr4 '<' RExpr4                        (20)
	RExpr3 -> RExpr4 '<=' RExpr4                       (21)
	RExpr3 -> RExpr4 '>' RExpr4                        (22)
	RExpr3 -> RExpr4 '>=' RExpr4                       (23)
	RExpr4 -> RExpr5                                   (24)
	RExpr4 -> RExpr4 '+' RExpr5                        (25)
	RExpr4 -> RExpr4 '-' RExpr5                        (26)
	RExpr5 -> RExpr6                                   (27)
	RExpr5 -> RExpr5 '*' RExpr6                        (28)
	RExpr5 -> RExpr5 '/' RExpr6                        (29)
	RExpr5 -> RExpr5 '%' RExpr6                        (30)
	RExpr6 -> RExpr7                                   (31)
	RExpr6 -> RExpr7 '^' RExpr6                        (32)
	RExpr7 -> RExpr8                                   (33)
	RExpr7 -> '-' RExpr8                               (34)
	RExpr7 -> '&' LExpr                                (35)
	RExpr8 -> RExpr9                                   (36)
	RExpr8 -> FunCall                                  (37)
	RExpr9 -> RExpr10                                  (38)
	RExpr9 -> Integer                                  (39)
	RExpr9 -> Char                                     (40)
	RExpr9 -> String                                   (41)
	RExpr9 -> Double                                   (42)
	RExpr9 -> Boolean                                  (43)
	RExpr9 -> '[' Integer ']' BasicType '{' ListRExpr '}'   (44)
	RExpr10 -> RExpr11                                 (45)
	RExpr11 -> RExpr12                                 (46)
	RExpr12 -> '(' RExpr ')'                           (47)
	RExpr12 -> LExpr                                   (48)
	FunCall -> Ident '(' ListRExpr ')'                 (49)
	ListRExpr ->                                       (50)
	ListRExpr -> RExpr                                 (51)
	ListRExpr -> RExpr ',' ListRExpr                   (52)
	LExpr -> LExpr1                                    (53)
	LExpr -> '*' RExpr9                                (54)
	LExpr1 -> LExpr2                                   (55)
	LExpr1 -> '++' LExpr2                              (56)
	LExpr1 -> '--' LExpr2                              (57)
	LExpr2 -> LExpr3                                   (58)
	LExpr2 -> LExpr3 '++'                              (59)
	LExpr2 -> LExpr3 '--'                              (60)
	LExpr2 -> BLExpr                                   (61)
	LExpr3 -> '(' LExpr ')'                            (62)
	BLExpr -> Ident '[' RExpr ']'                      (63)
	BLExpr -> Ident                                    (64)
	Program -> ListDecl                                (65)
	ListDecl ->                                        (66)
	ListDecl -> Decl ListDecl                          (67)
	Decl -> 'func' Ident '(' ListParameter ')' CompStmt   (68)
	Decl -> 'var' VarSpec ';'                          (69)
	ListParameter ->                                   (70)
	ListParameter -> Parameter                         (71)
	ListParameter -> Parameter ',' ListParameter       (72)
	Parameter -> 'var' Ident TypeSpec                  (73)
	VarSpec -> Ident TypeSpec '=' RExpr                (74)
	VarSpec -> Ident '=' RExpr                         (75)
	VarSpec -> Ident TypeSpec                          (76)
	TypeSpec -> BasicType                              (77)
	TypeSpec -> CompoundType                           (78)
	BasicType -> 'bool'                                (79)
	BasicType -> 'char'                                (80)
	BasicType -> 'float'                               (81)
	BasicType -> 'int'                                 (82)
	BasicType -> 'string'                              (83)
	CompoundType -> '[' Integer ']' TypeSpec           (84)
	CompoundType -> '[' ']' TypeSpec                   (85)
	CompoundType -> '*' TypeSpec                       (86)
	CompStmt -> '{' ListBlockItem '}'                  (87)
	ListBlockItem ->                                   (88)
	ListBlockItem -> BlockItem ListBlockItem           (89)
	BlockItem -> Decl                                  (90)
	BlockItem -> Stmt                                  (91)
	ListStmt ->                                        (92)
	ListStmt -> Stmt ListStmt                          (93)
	Stmt -> CompStmt                                   (94)
	Stmt -> FunCall ';'                                (95)
	Stmt -> JumpStmt ';'                               (96)
	Stmt -> IterStmt                                   (97)
	Stmt -> SelectionStmt                              (98)
	Stmt -> LExpr Assignment_op RExpr ';'              (99)
	Stmt -> LExpr ';'                                  (100)
	Stmt -> 'var' VarSpec ';'                          (101)
	Stmt -> Ident '++' ';'                             (102)
	Stmt -> Ident '--' ';'                             (103)
	Assignment_op -> '='                               (104)
	Assignment_op -> '*='                              (105)
	Assignment_op -> '+='                              (106)
	Assignment_op -> '/='                              (107)
	Assignment_op -> '-='                              (108)
	Assignment_op -> '^='                              (109)
	Assignment_op -> '&='                              (110)
	Assignment_op -> '|='                              (111)
	JumpStmt -> 'break'                                (112)
	JumpStmt -> 'continue'                             (113)
	SelectionStmt -> 'if' '(' RExpr ')' Stmt           (114)
	SelectionStmt -> 'if' '(' RExpr ')' Stmt 'else' Stmt   (115)
	IterStmt -> 'while' '(' RExpr ')' Stmt             (116)
	IterStmt -> 'do' Stmt 'while' '(' RExpr ')' ';'    (117)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'&='           { PT _ (TS _ 6) }
	'('            { PT _ (TS _ 7) }
	')'            { PT _ (TS _ 8) }
	'*'            { PT _ (TS _ 9) }
	'*='           { PT _ (TS _ 10) }
	'+'            { PT _ (TS _ 11) }
	'++'           { PT _ (TS _ 12) }
	'+='           { PT _ (TS _ 13) }
	','            { PT _ (TS _ 14) }
	'-'            { PT _ (TS _ 15) }
	'--'           { PT _ (TS _ 16) }
	'-='           { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	'/='           { PT _ (TS _ 19) }
	';'            { PT _ (TS _ 20) }
	'<'            { PT _ (TS _ 21) }
	'<='           { PT _ (TS _ 22) }
	'='            { PT _ (TS _ 23) }
	'=='           { PT _ (TS _ 24) }
	'>'            { PT _ (TS _ 25) }
	'>='           { PT _ (TS _ 26) }
	'['            { PT _ (TS _ 27) }
	']'            { PT _ (TS _ 28) }
	'^'            { PT _ (TS _ 29) }
	'^='           { PT _ (TS _ 30) }
	'bool'         { PT _ (TS _ 31) }
	'break'        { PT _ (TS _ 32) }
	'char'         { PT _ (TS _ 33) }
	'continue'     { PT _ (TS _ 34) }
	'do'           { PT _ (TS _ 35) }
	'else'         { PT _ (TS _ 36) }
	'false'        { PT _ (TS _ 37) }
	'float'        { PT _ (TS _ 38) }
	'func'         { PT _ (TS _ 39) }
	'if'           { PT _ (TS _ 40) }
	'int'          { PT _ (TS _ 41) }
	'string'       { PT _ (TS _ 42) }
	'true'         { PT _ (TS _ 43) }
	'var'          { PT _ (TS _ 44) }
	'while'        { PT _ (TS _ 45) }
	'{'            { PT _ (TS _ 46) }
	'|='           { PT _ (TS _ 47) }
	'||'           { PT _ (TS _ 48) }
	'}'            { PT _ (TS _ 49) }
	L_Ident        { PT _ (TV $$) }
	L_charac       { PT _ (TC $$) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pStmt    rule  1
	%start_pRExpr   rule  2
	%start_pLExpr   rule  3
	Ident           rule  4
	Char            rule  5
	Double          rule  6
	Integer         rule  7
	String          rule  8
	Boolean         rules 9, 10
	RExpr           rules 11, 12
	RExpr1          rules 13, 14
	RExpr2          rules 15, 16
	RExpr3          rules 17, 18, 19, 20, 21, 22, 23
	RExpr4          rules 24, 25, 26
	RExpr5          rules 27, 28, 29, 30
	RExpr6          rules 31, 32
	RExpr7          rules 33, 34, 35
	RExpr8          rules 36, 37
	RExpr9          rules 38, 39, 40, 41, 42, 43, 44
	RExpr10         rule  45
	RExpr11         rule  46
	RExpr12         rules 47, 48
	FunCall         rule  49
	ListRExpr       rules 50, 51, 52
	LExpr           rules 53, 54
	LExpr1          rules 55, 56, 57
	LExpr2          rules 58, 59, 60, 61
	LExpr3          rule  62
	BLExpr          rules 63, 64
	Program         rule  65
	ListDecl        rules 66, 67
	Decl            rules 68, 69
	ListParameter   rules 70, 71, 72
	Parameter       rule  73
	VarSpec         rules 74, 75, 76
	TypeSpec        rules 77, 78
	BasicType       rules 79, 80, 81, 82, 83
	CompoundType    rules 84, 85, 86
	CompStmt        rule  87
	ListBlockItem   rules 88, 89
	BlockItem       rules 90, 91
	ListStmt        rules 92, 93
	Stmt            rules 94, 95, 96, 97, 98, 99, 100, 101, 102, 103
	Assignment_op   rules 104, 105, 106, 107, 108, 109, 110, 111
	JumpStmt        rules 112, 113
	SelectionStmt   rules 114, 115
	IterStmt        rules 116, 117

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'func'         shift, and enter state 66
	'var'          shift, and enter state 67
	%eof           reduce using rule 66

	Program        goto state 63
	ListDecl       goto state 64
	Decl           goto state 65

State 1

	%start_pStmt -> . Stmt                              (rule 1)

	'('            shift, and enter state 12
	'*'            shift, and enter state 13
	'++'           shift, and enter state 14
	'--'           shift, and enter state 15
	'break'        shift, and enter state 56
	'continue'     shift, and enter state 57
	'do'           shift, and enter state 58
	'if'           shift, and enter state 59
	'var'          shift, and enter state 60
	'while'        shift, and enter state 61
	'{'            shift, and enter state 62
	L_Ident        shift, and enter state 5

	Ident          goto state 48
	FunCall        goto state 49
	LExpr          goto state 50
	LExpr1         goto state 8
	LExpr2         goto state 9
	LExpr3         goto state 10
	BLExpr         goto state 11
	CompStmt       goto state 51
	Stmt           goto state 52
	JumpStmt       goto state 53
	SelectionStmt  goto state 54
	IterStmt       goto state 55

State 2

	%start_pRExpr -> . RExpr                            (rule 2)

	'!'            shift, and enter state 37
	'&'            shift, and enter state 38
	'('            shift, and enter state 39
	'*'            shift, and enter state 13
	'++'           shift, and enter state 14
	'-'            shift, and enter state 40
	'--'           shift, and enter state 15
	'['            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_Ident        shift, and enter state 5
	L_charac       shift, and enter state 44
	L_doubl        shift, and enter state 45
	L_integ        shift, and enter state 46
	L_quoted       shift, and enter state 47

	Ident          goto state 16
	Char           goto state 17
	Double         goto state 18
	Integer        goto state 19
	String         goto state 20
	Boolean        goto state 21
	RExpr          goto state 22
	RExpr1         goto state 23
	RExpr2         goto state 24
	RExpr3         goto state 25
	RExpr4         goto state 26
	RExpr5         goto state 27
	RExpr6         goto state 28
	RExpr7         goto state 29
	RExpr8         goto state 30
	RExpr9         goto state 31
	RExpr10        goto state 32
	RExpr11        goto state 33
	RExpr12        goto state 34
	FunCall        goto state 35
	LExpr          goto state 36
	LExpr1         goto state 8
	LExpr2         goto state 9
	LExpr3         goto state 10
	BLExpr         goto state 11

State 3

	%start_pLExpr -> . LExpr                            (rule 3)

	'('            shift, and enter state 12
	'*'            shift, and enter state 13
	'++'           shift, and enter state 14
	'--'           shift, and enter state 15
	L_Ident        shift, and enter state 5

	Ident          goto state 6
	LExpr          goto state 7
	LExpr1         goto state 8
	LExpr2         goto state 9
	LExpr3         goto state 10
	BLExpr         goto state 11

State 4

	Ident -> . L_Ident                                  (rule 4)

	L_Ident        shift, and enter state 5


State 5

	Ident -> L_Ident .                                  (rule 4)

	'!='           reduce using rule 4
	'%'            reduce using rule 4
	'&&'           reduce using rule 4
	'&='           reduce using rule 4
	'('            reduce using rule 4
	')'            reduce using rule 4
	'*'            reduce using rule 4
	'*='           reduce using rule 4
	'+'            reduce using rule 4
	'++'           reduce using rule 4
	'+='           reduce using rule 4
	','            reduce using rule 4
	'-'            reduce using rule 4
	'--'           reduce using rule 4
	'-='           reduce using rule 4
	'/'            reduce using rule 4
	'/='           reduce using rule 4
	';'            reduce using rule 4
	'<'            reduce using rule 4
	'<='           reduce using rule 4
	'='            reduce using rule 4
	'=='           reduce using rule 4
	'>'            reduce using rule 4
	'>='           reduce using rule 4
	'['            reduce using rule 4
	']'            reduce using rule 4
	'^'            reduce using rule 4
	'^='           reduce using rule 4
	'bool'         reduce using rule 4
	'char'         reduce using rule 4
	'float'        reduce using rule 4
	'int'          reduce using rule 4
	'string'       reduce using rule 4
	'|='           reduce using rule 4
	'||'           reduce using rule 4
	'}'            reduce using rule 4
	%eof           reduce using rule 4


State 6

	BLExpr -> Ident . '[' RExpr ']'                     (rule 63)
	BLExpr -> Ident .                                   (rule 64)

	'!='           reduce using rule 64
	'%'            reduce using rule 64
	'&&'           reduce using rule 64
	'&='           reduce using rule 64
	')'            reduce using rule 64
	'*'            reduce using rule 64
	'*='           reduce using rule 64
	'+'            reduce using rule 64
	'+='           reduce using rule 64
	','            reduce using rule 64
	'-'            reduce using rule 64
	'-='           reduce using rule 64
	'/'            reduce using rule 64
	'/='           reduce using rule 64
	';'            reduce using rule 64
	'<'            reduce using rule 64
	'<='           reduce using rule 64
	'='            reduce using rule 64
	'=='           reduce using rule 64
	'>'            reduce using rule 64
	'>='           reduce using rule 64
	'['            shift, and enter state 96
	']'            reduce using rule 64
	'^'            reduce using rule 64
	'^='           reduce using rule 64
	'|='           reduce using rule 64
	'||'           reduce using rule 64
	'}'            reduce using rule 64
	%eof           reduce using rule 64


State 7

	%start_pLExpr -> LExpr .                            (rule 3)

	%eof           accept


State 8

	LExpr -> LExpr1 .                                   (rule 53)

	'!='           reduce using rule 53
	'%'            reduce using rule 53
	'&&'           reduce using rule 53
	'&='           reduce using rule 53
	')'            reduce using rule 53
	'*'            reduce using rule 53
	'*='           reduce using rule 53
	'+'            reduce using rule 53
	'+='           reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	'-='           reduce using rule 53
	'/'            reduce using rule 53
	'/='           reduce using rule 53
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'='            reduce using rule 53
	'=='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	']'            reduce using rule 53
	'^'            reduce using rule 53
	'^='           reduce using rule 53
	'|='           reduce using rule 53
	'||'           reduce using rule 53
	'}'            reduce using rule 53
	%eof           reduce using rule 53


State 9

	LExpr1 -> LExpr2 .                                  (rule 55)

	'!='           reduce using rule 55
	'%'            reduce using rule 55
	'&&'           reduce using rule 55
	'&='           reduce using rule 55
	')'            reduce using rule 55
	'*'            reduce using rule 55
	'*='           reduce using rule 55
	'+'            reduce using rule 55
	'+='           reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'-='           reduce using rule 55
	'/'            reduce using rule 55
	'/='           reduce using rule 55
	';'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'='            reduce using rule 55
	'=='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	']'            reduce using rule 55
	'^'            reduce using rule 55
	'^='           reduce using rule 55
	'|='           reduce using rule 55
	'||'           reduce using rule 55
	'}'            reduce using rule 55
	%eof           reduce using rule 55


State 10

	LExpr2 -> LExpr3 .                                  (rule 58)
	LExpr2 -> LExpr3 . '++'                             (rule 59)
	LExpr2 -> LExpr3 . '--'                             (rule 60)

	'!='           reduce using rule 58
	'%'            reduce using rule 58
	'&&'           reduce using rule 58
	'&='           reduce using rule 58
	')'            reduce using rule 58
	'*'            reduce using rule 58
	'*='           reduce using rule 58
	'+'            reduce using rule 58
	'++'           shift, and enter state 121
	'+='           reduce using rule 58
	','            reduce using rule 58
	'-'            reduce using rule 58
	'--'           shift, and enter state 122
	'-='           reduce using rule 58
	'/'            reduce using rule 58
	'/='           reduce using rule 58
	';'            reduce using rule 58
	'<'            reduce using rule 58
	'<='           reduce using rule 58
	'='            reduce using rule 58
	'=='           reduce using rule 58
	'>'            reduce using rule 58
	'>='           reduce using rule 58
	']'            reduce using rule 58
	'^'            reduce using rule 58
	'^='           reduce using rule 58
	'|='           reduce using rule 58
	'||'           reduce using rule 58
	'}'            reduce using rule 58
	%eof           reduce using rule 58


State 11

	LExpr2 -> BLExpr .                                  (rule 61)

	'!='           reduce using rule 61
	'%'            reduce using rule 61
	'&&'           reduce using rule 61
	'&='           reduce using rule 61
	')'            reduce using rule 61
	'*'            reduce using rule 61
	'*='           reduce using rule 61
	'+'            reduce using rule 61
	'+='           reduce using rule 61
	','            reduce using rule 61
	'-'            reduce using rule 61
	'-='           reduce using rule 61
	'/'            reduce using rule 61
	'/='           reduce using rule 61
	';'            reduce using rule 61
	'<'            reduce using rule 61
	'<='           reduce using rule 61
	'='            reduce using rule 61
	'=='           reduce using rule 61
	'>'            reduce using rule 61
	'>='           reduce using rule 61
	']'            reduce using rule 61
	'^'            reduce using rule 61
	'^='           reduce using rule 61
	'|='           reduce using rule 61
	'||'           reduce using rule 61
	'}'            reduce using rule 61
	%eof           reduce using rule 61


State 12

	LExpr3 -> '(' . LExpr ')'                           (rule 62)

	'('            shift, and enter state 12
	'*'            shift, and enter state 13
	'++'           shift, and enter state 14
	'--'           shift, and enter state 15
	L_Ident        shift, and enter state 5

	Ident          goto state 6
	LExpr          goto state 120
	LExpr1         goto state 8
	LExpr2         goto state 9
	LExpr3         goto state 10
	BLExpr         goto state 11

State 13

	LExpr -> '*' . RExpr9                               (rule 54)
